Fix the "mtree -M" problem reported in PR 42031 by Geoff Wing. The cause of the problem was that part of the code assumed that nodecmp() on two nodes with the same name would return 0, but in fact nodecmp() would return -1 or +1 if one of the nodes was a directory and the other was not.  The fix is to separate the notion of whether or not a duplicate name was found from the notion of where the new node should appear in the list.